# coding-agent-project-template

./: AGENTS.md  README.md  pyproject.toml
.decisions/: 001-python-openpyxl-cli.md
.github/workflows/: ci.yml
.plans/: gentms-cli.md
.project/: README.md  build.md  conventions.md  release.md  structure.md  testing.md  verification.toml
scripts/: verify.py
src/gentms/: __main__.py  cli.py  fiscal.py  workbook.py
tests/: test_cli.py  test_fiscal.py  test_workbook.py
