[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gentms"
version = "0.1.0"
description = "Generate fiscal-year timesheet Excel workbooks."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "openpyxl>=3.1,<4",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.19,<2",
  "pytest>=8,<9",
  "ruff>=0.11,<0.12",
  "types-openpyxl>=3.1.5.20260322,<4",
]

[project.scripts]
gentms = "gentms.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.11"
files = ["src", "tests", "scripts/verify.py"]
warn_unused_configs = true
check_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
show_error_codes = true
pretty = true
